--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2",
     "webpack-dev-middleware": "^7.4.2",
+    "zod": "^4.0.14",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
