--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 # keep Neon credentials secure: do not expose them to client-side code
-DATABASE_URL='postgresql://neondb_owner:npg_ZmEh2FXuWlU9@ep-floral-glitter-a18ou0fv-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+
+DATABASE_URL='postgresql://neondb_owner:npg_E5scy4XjSImZ@ep-steep-tree-a1xfbe14-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 JWT_SECRET=secretKey
 API_BASE_URL=https://ak-portfolio-nextjs.vercel.app
