--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "idb-keyval": "^6.2.2",
+    "idb": "^8.0.3",
     "js-cookie": "^3.0.5",
     "next": "15.4.3",
     "pg": "^8.16.3",
