--- a/.env.development
+++ b/.env.development
@@ -6,4 +6,5 @@ PG_USER=postgres
 PG_PASSWORD=Ajee@74183
 PG_DATABASE=fullstacknextjs
 JWT_SECRET=secretKey
-API_BASE_URL=http://localdev:3000
+# API_BASE_URL=http://localdev:3000
+API_BASE_URL=http://localhost:3000
