--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "i18next": "^25.4.2",
     "idb": "^8.0.3",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.542.0",
     "next": "15.4.3",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.3.5",
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.7.3",
     "webpack-dev-middleware": "^7.4.2",
     "zod": "^4.0.14",
     "zustand": "^4.5.7"
@@ -35,8 +40,8 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/pg": "^8.15.4",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
