env changed into NEXT_PUBLIC_API_BASE_URL

--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 
 DATABASE_URL='postgresql://neondb_owner:npg_E5scy4XjSImZ@ep-steep-tree-a1xfbe14-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 JWT_SECRET=secretKey
-API_BASE_URL=https://ak-portfolio-nextjs.vercel.app
+NEXT_PUBLIC_API_BASE_URL=https://ak-portfolio-nextjs.vercel.app
