--- a/.env.development
+++ b/.env.development
@@ -7,4 +7,4 @@ PG_PASSWORD=Ajee@74183
 PG_DATABASE=fullstacknextjs
 JWT_SECRET=secretKey
 # API_BASE_URL=http://localdev:3000
-API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
