--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "idb": "^8.0.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
-    "next": "15.4.3",
+    "next": "^15.5.2",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.5",
     "pg": "^8.16.3",
