--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
@@ -22,11 +25,13 @@
     "next": "^15.5.2",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.5",
+    "next-redux-wrapper": "^8.1.0",
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.7.3",
+    "react-redux": "^9.2.0",
     "webpack-dev-middleware": "^7.4.2",
     "zod": "^4.0.14",
     "zustand": "^4.5.7"
@@ -34,18 +39,29 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/cors": "^2.8.19",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "babel-jest": "^30.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
