--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.0",
@@ -27,18 +33,22 @@
     "next-intl": "^4.3.5",
     "next-redux-wrapper": "^8.1.0",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "webpack-dev-middleware": "^7.4.2",
     "zod": "^4.0.14",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -59,7 +69,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.13",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
