--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,8 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./src/*"]
     },
     "types": ["jest", "@testing-library/jest-dom"]
   },
