--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@
 DATABASE_URL='postgresql://neondb_owner:npg_E5scy4XjSImZ@ep-steep-tree-a1xfbe14-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 JWT_SECRET=secretKey
 NEXT_PUBLIC_API_BASE_URL=https://ajithkumaranandanportfolio.vercel.app
+GIT_COMMIT_AUTHOR_NAME="AjithkumarMechon" GIT_COMMIT_AUTHOR_EMAIL="ajithkumaranandanmech@gmail.com" vercel --prod --confirm
